--- a/x86.config
+++ b/x86.config
@@ -5385,7 +5385,7 @@ CONFIG_PACKAGE_luci-lib-xterm=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-alist-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-alist-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-alist-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-ap-modem-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ap-modem-zh_Hans is not set
@@ -6504,7 +6504,7 @@ CONFIG_PACKAGE_zerotier=y
 #
 # Web Servers/Proxies
 #
-CONFIG_PACKAGE_alist=y
+# CONFIG_PACKAGE_alist=y
 # CONFIG_PACKAGE_apache is not set
 # CONFIG_PACKAGE_brook is not set
 # CONFIG_PACKAGE_cgi-io is not set
